--- a/stacks/vpc.yml
+++ b/stacks/vpc.yml
@@ -25,7 +25,7 @@ Parameters:
 
 Resources:
   VPC:
-    Type: "AWS::EC2::VPC"
+    Type: AWS::EC2::VPC
     Properties:
       CidrBlock: 10.0.0.0/16
       EnableDnsSupport: true
@@ -38,19 +38,19 @@ Resources:
           Value: !Ref EnvironmentType
         - Key: Name
           Value: !Sub Platform-${EnvironmentType}
-        - Key: "prx:cloudformation:stack-name"
+        - Key: prx:cloudformation:stack-name
           Value: !Ref AWS::StackName
-        - Key: "prx:cloudformation:stack-id"
+        - Key: prx:cloudformation:stack-id
           Value: !Ref AWS::StackId
   IPv6VCPCidrBlock:
-    Type: "AWS::EC2::VPCCidrBlock"
+    Type: AWS::EC2::VPCCidrBlock
     Properties:
       VpcId: !Ref VPC
       AmazonProvidedIpv6CidrBlock: true
 
   # Internet gateways
   InternetGateway:
-    Type: "AWS::EC2::InternetGateway"
+    Type: AWS::EC2::InternetGateway
     Properties:
       Tags:
         - Key: Project
@@ -59,19 +59,19 @@ Resources:
           Value: !Ref EnvironmentType
         - Key: Name
           Value: !Sub Platform-${EnvironmentType}
-        - Key: "prx:cloudformation:stack-name"
+        - Key: prx:cloudformation:stack-name
           Value: !Ref AWS::StackName
-        - Key: "prx:cloudformation:stack-id"
+        - Key: prx:cloudformation:stack-id
           Value: !Ref AWS::StackId
   GatewayAttachment:
-    Type: "AWS::EC2::VPCGatewayAttachment"
+    Type: AWS::EC2::VPCGatewayAttachment
     Properties:
       VpcId: !Ref VPC
       InternetGatewayId: !Ref InternetGateway
 
   # Routing for public subnets
   RouteTable:
-    Type: "AWS::EC2::RouteTable"
+    Type: AWS::EC2::RouteTable
     Properties:
       VpcId: !Ref VPC
       Tags:
@@ -81,19 +81,19 @@ Resources:
           Value: !Ref EnvironmentType
         - Key: Name
           Value: !Sub Platform-${EnvironmentType}
-        - Key: "prx:cloudformation:stack-name"
+        - Key: prx:cloudformation:stack-name
           Value: !Ref AWS::StackName
-        - Key: "prx:cloudformation:stack-id"
+        - Key: prx:cloudformation:stack-id
           Value: !Ref AWS::StackId
   Route:
-    Type: "AWS::EC2::Route"
+    Type: AWS::EC2::Route
     DependsOn: GatewayAttachment
     Properties:
       RouteTableId: !Ref RouteTable
       GatewayId: !Ref InternetGateway
       DestinationCidrBlock: 0.0.0.0/0
   IPv6Route:
-    Type: "AWS::EC2::Route"
+    Type: AWS::EC2::Route
     Properties:
       DestinationIpv6CidrBlock: ::/0
       GatewayId: !Ref InternetGateway
@@ -101,15 +101,15 @@ Resources:
 
   # VPC endpoints
   S3Endpoint:
-    Type: "AWS::EC2::VPCEndpoint"
+    Type: AWS::EC2::VPCEndpoint
     Properties:
       RouteTableIds:
         - !Ref RouteTable
-      ServiceName: !Sub "com.amazonaws.${AWS::Region}.s3"
+      ServiceName: !Sub com.amazonaws.${AWS::Region}.s3
       VpcEndpointType: Gateway
       VpcId: !Ref VPC
   KinesisEndpointSecurityGroup:
-    Type: "AWS::EC2::SecurityGroup"
+    Type: AWS::EC2::SecurityGroup
     Properties:
       VpcId: !Ref VPC
       GroupDescription: Allow kinesis traffic
@@ -129,18 +129,18 @@ Resources:
           Value: !Ref EnvironmentType
         - Key: Name
           Value: !Sub Platform-${EnvironmentType}
-        - Key: "prx:cloudformation:stack-name"
+        - Key: prx:cloudformation:stack-name
           Value: !Ref AWS::StackName
-        - Key: "prx:cloudformation:stack-id"
+        - Key: prx:cloudformation:stack-id
           Value: !Ref AWS::StackId
   KinesisEndpoint:
-    Type: "AWS::EC2::VPCEndpoint"
+    Type: AWS::EC2::VPCEndpoint
     Properties:
       PrivateDnsEnabled: true
       SecurityGroupIds:
         - !GetAtt VPC.DefaultSecurityGroup
         - !Ref KinesisEndpointSecurityGroup
-      ServiceName: !Sub "com.amazonaws.${AWS::Region}.kinesis-streams"
+      ServiceName: !Sub com.amazonaws.${AWS::Region}.kinesis-streams
       SubnetIds:
         - !Ref Subnet1
         - !Ref Subnet2
@@ -215,7 +215,7 @@ Resources:
 
   # Public subnets
   Subnet1:
-    Type: "AWS::EC2::Subnet"
+    Type: AWS::EC2::Subnet
     DependsOn: IPv6VCPCidrBlock
     UpdateReplacePolicy: Retain
     Properties:
@@ -230,12 +230,12 @@ Resources:
           Value: !Ref EnvironmentType
         - Key: Name
           Value: !Sub Platform-${EnvironmentType}-1
-        - Key: "prx:cloudformation:stack-name"
+        - Key: prx:cloudformation:stack-name
           Value: !Ref AWS::StackName
-        - Key: "prx:cloudformation:stack-id"
+        - Key: prx:cloudformation:stack-id
           Value: !Ref AWS::StackId
   Subnet2:
-    Type: "AWS::EC2::Subnet"
+    Type: AWS::EC2::Subnet
     DependsOn: IPv6VCPCidrBlock
     UpdateReplacePolicy: Retain
     Properties:
@@ -250,12 +250,12 @@ Resources:
           Value: !Ref EnvironmentType
         - Key: Name
           Value: !Sub Platform-${EnvironmentType}-2
-        - Key: "prx:cloudformation:stack-name"
+        - Key: prx:cloudformation:stack-name
           Value: !Ref AWS::StackName
-        - Key: "prx:cloudformation:stack-id"
+        - Key: prx:cloudformation:stack-id
           Value: !Ref AWS::StackId
   Subnet3:
-    Type: "AWS::EC2::Subnet"
+    Type: AWS::EC2::Subnet
     DependsOn: IPv6VCPCidrBlock
     UpdateReplacePolicy: Retain
     Properties:
@@ -270,22 +270,22 @@ Resources:
           Value: !Ref EnvironmentType
         - Key: Name
           Value: !Sub Platform-${EnvironmentType}-3
-        - Key: "prx:cloudformation:stack-name"
+        - Key: prx:cloudformation:stack-name
           Value: !Ref AWS::StackName
-        - Key: "prx:cloudformation:stack-id"
+        - Key: prx:cloudformation:stack-id
           Value: !Ref AWS::StackId
   Subnet1RouteTableAssociation:
-    Type: "AWS::EC2::SubnetRouteTableAssociation"
+    Type: AWS::EC2::SubnetRouteTableAssociation
     Properties:
       SubnetId: !Ref Subnet1
       RouteTableId: !Ref RouteTable
   Subnet2RouteTableAssociation:
-    Type: "AWS::EC2::SubnetRouteTableAssociation"
+    Type: AWS::EC2::SubnetRouteTableAssociation
     Properties:
       SubnetId: !Ref Subnet2
       RouteTableId: !Ref RouteTable
   Subnet3RouteTableAssociation:
-    Type: "AWS::EC2::SubnetRouteTableAssociation"
+    Type: AWS::EC2::SubnetRouteTableAssociation
     Properties:
       SubnetId: !Ref Subnet3
       RouteTableId: !Ref RouteTable
@@ -302,14 +302,14 @@ Resources:
           Value: !Ref EnvironmentType
         - Key: Name
           Value: !Sub Platform-${EnvironmentType}
-        - Key: "prx:cloudformation:stack-name"
+        - Key: prx:cloudformation:stack-name
           Value: !Ref AWS::StackName
-        - Key: "prx:cloudformation:stack-id"
+        - Key: prx:cloudformation:stack-id
           Value: !Ref AWS::StackId
 
   # ACL inbound rules
   InboundIPv4HTTPSNetworkAclEntry:
-    Type: "AWS::EC2::NetworkAclEntry"
+    Type: AWS::EC2::NetworkAclEntry
     Properties:
       CidrBlock: 0.0.0.0/0
       Egress: false
@@ -321,7 +321,7 @@ Resources:
       RuleAction : allow
       RuleNumber : 120
   InboundIPv6HTTPSNetworkAclEntry:
-    Type: "AWS::EC2::NetworkAclEntry"
+    Type: AWS::EC2::NetworkAclEntry
     Properties:
       Egress: false
       Ipv6CidrBlock: ::/0
@@ -334,7 +334,7 @@ Resources:
       RuleNumber : 121
 
   InboundIPv4HTTPNetworkAclEntry:
-    Type: "AWS::EC2::NetworkAclEntry"
+    Type: AWS::EC2::NetworkAclEntry
     Properties:
       CidrBlock: 0.0.0.0/0
       Egress: false
@@ -346,7 +346,7 @@ Resources:
       RuleAction : allow
       RuleNumber : 130
   InboundIPv6HTTPNetworkAclEntry:
-    Type: "AWS::EC2::NetworkAclEntry"
+    Type: AWS::EC2::NetworkAclEntry
     Properties:
       Egress: false
       Ipv6CidrBlock: ::/0
@@ -359,7 +359,7 @@ Resources:
       RuleNumber : 131
 
   InboundIPv4UDPHTTPSNetworkAclEntry:
-    Type: "AWS::EC2::NetworkAclEntry"
+    Type: AWS::EC2::NetworkAclEntry
     Properties:
       CidrBlock: 0.0.0.0/0
       Egress: false
@@ -371,7 +371,7 @@ Resources:
       RuleAction : allow
       RuleNumber : 140
   InboundIPv6UDPHTTPSNetworkAclEntry:
-    Type: "AWS::EC2::NetworkAclEntry"
+    Type: AWS::EC2::NetworkAclEntry
     Properties:
       Egress: false
       Ipv6CidrBlock: ::/0
@@ -384,7 +384,7 @@ Resources:
       RuleNumber : 141
 
   InboundIPv4UDPHTTPNetworkAclEntry:
-    Type: "AWS::EC2::NetworkAclEntry"
+    Type: AWS::EC2::NetworkAclEntry
     Properties:
       CidrBlock: 0.0.0.0/0
       Egress: false
@@ -396,7 +396,7 @@ Resources:
       RuleAction : allow
       RuleNumber : 150
   InboundIPv6UDPHTTPNetworkAclEntry:
-    Type: "AWS::EC2::NetworkAclEntry"
+    Type: AWS::EC2::NetworkAclEntry
     Properties:
       Egress: false
       Ipv6CidrBlock: ::/0
@@ -409,7 +409,7 @@ Resources:
       RuleNumber : 151
 
   InboundIPv4SSHNetworkAclEntry:
-    Type: "AWS::EC2::NetworkAclEntry"
+    Type: AWS::EC2::NetworkAclEntry
     Properties:
       CidrBlock: 0.0.0.0/0
       Egress: false
@@ -421,7 +421,7 @@ Resources:
       RuleAction : allow
       RuleNumber : 230
   InboundIPv6SSHNetworkAclEntry:
-    Type: "AWS::EC2::NetworkAclEntry"
+    Type: AWS::EC2::NetworkAclEntry
     Properties:
       Egress: false
       Ipv6CidrBlock: ::/0
@@ -434,7 +434,7 @@ Resources:
       RuleNumber : 231
 
   InboundIPv4UDPSSHNetworkAclEntry:
-    Type: "AWS::EC2::NetworkAclEntry"
+    Type: AWS::EC2::NetworkAclEntry
     Properties:
       CidrBlock: 0.0.0.0/0
       Egress: false
@@ -446,7 +446,7 @@ Resources:
       RuleAction : allow
       RuleNumber : 240
   InboundIPv6UDPSSHNetworkAclEntry:
-    Type: "AWS::EC2::NetworkAclEntry"
+    Type: AWS::EC2::NetworkAclEntry
     Properties:
       Egress: false
       Ipv6CidrBlock: ::/0
@@ -459,7 +459,7 @@ Resources:
       RuleNumber : 241
 
   InboundIPv4NTPNetworkAclEntry:
-    Type: "AWS::EC2::NetworkAclEntry"
+    Type: AWS::EC2::NetworkAclEntry
     Properties:
       CidrBlock: 0.0.0.0/0
       Egress: false
@@ -471,7 +471,7 @@ Resources:
       RuleAction : allow
       RuleNumber : 250
   InboundIPv6NTPNetworkAclEntry:
-    Type: "AWS::EC2::NetworkAclEntry"
+    Type: AWS::EC2::NetworkAclEntry
     Properties:
       Egress: false
       Ipv6CidrBlock: ::/0
@@ -484,7 +484,7 @@ Resources:
       RuleNumber : 251
 
   InboundIPv4ReturnTrafficNetworkAclEntry:
-    Type: "AWS::EC2::NetworkAclEntry"
+    Type: AWS::EC2::NetworkAclEntry
     Properties:
       CidrBlock: 0.0.0.0/0
       Egress: false
@@ -496,7 +496,7 @@ Resources:
       RuleAction : allow
       RuleNumber : 520
   InboundIPv6ReturnTrafficNetworkAclEntry:
-    Type: "AWS::EC2::NetworkAclEntry"
+    Type: AWS::EC2::NetworkAclEntry
     Properties:
       Egress: false
       Ipv6CidrBlock: ::/0
@@ -509,7 +509,7 @@ Resources:
       RuleNumber : 521
 
   InboundIPv4UDPReturnTrafficNetworkAclEntry:
-    Type: "AWS::EC2::NetworkAclEntry"
+    Type: AWS::EC2::NetworkAclEntry
     Properties:
       CidrBlock: 0.0.0.0/0
       Egress: false
@@ -521,7 +521,7 @@ Resources:
       RuleAction : allow
       RuleNumber : 530
   InboundIPv6UDPReturnTrafficNetworkAclEntry:
-    Type: "AWS::EC2::NetworkAclEntry"
+    Type: AWS::EC2::NetworkAclEntry
     Properties:
       Egress: false
       Ipv6CidrBlock: ::/0
@@ -536,7 +536,7 @@ Resources:
   # ACL outbound rules
   OutboudIPv4TrafficNetworkAclEntry:
     # Allow allw outbound IPv4 traffic
-    Type: "AWS::EC2::NetworkAclEntry"
+    Type: AWS::EC2::NetworkAclEntry
     Properties:
       CidrBlock: 0.0.0.0/0
       Egress: true
@@ -546,7 +546,7 @@ Resources:
       RuleNumber : 120
   OutboudIPv6TrafficNetworkAclEntry:
     # Allow allw outbound IPv6 traffic
-    Type: "AWS::EC2::NetworkAclEntry"
+    Type: AWS::EC2::NetworkAclEntry
     Properties:
       Egress: true
       Ipv6CidrBlock: ::/0
@@ -557,24 +557,24 @@ Resources:
 
   # Public subnet ACL associations
   Subnet1NetworkAclAssociation:
-    Type: "AWS::EC2::SubnetNetworkAclAssociation"
+    Type: AWS::EC2::SubnetNetworkAclAssociation
     Properties:
       SubnetId: !Ref Subnet1
       NetworkAclId: !Ref NetworkAcl
   Subnet2NetworkAclAssociation:
-    Type: "AWS::EC2::SubnetNetworkAclAssociation"
+    Type: AWS::EC2::SubnetNetworkAclAssociation
     Properties:
       SubnetId: !Ref Subnet2
       NetworkAclId: !Ref NetworkAcl
   Subnet3NetworkAclAssociation:
-    Type: "AWS::EC2::SubnetNetworkAclAssociation"
+    Type: AWS::EC2::SubnetNetworkAclAssociation
     Properties:
       SubnetId: !Ref Subnet3
       NetworkAclId: !Ref NetworkAcl
 
   # DHCP
   DHCPOptions:
-    Type: "AWS::EC2::DHCPOptions"
+    Type: AWS::EC2::DHCPOptions
     Properties:
       DomainName: ec2.internal
       DomainNameServers:
@@ -586,28 +586,28 @@ Resources:
           Value: !Ref EnvironmentType
         - Key: Name
           Value: !Sub Platform-${EnvironmentType}
-        - Key: "prx:cloudformation:stack-name"
+        - Key: prx:cloudformation:stack-name
           Value: !Ref AWS::StackName
-        - Key: "prx:cloudformation:stack-id"
+        - Key: prx:cloudformation:stack-id
           Value: !Ref AWS::StackId
   DHCPOptionsAssociation:
-    Type: "AWS::EC2::VPCDHCPOptionsAssociation"
+    Type: AWS::EC2::VPCDHCPOptionsAssociation
     Properties:
       DhcpOptionsId: !Ref DHCPOptions
       VpcId: !Ref VPC
   # VPC Peering
   VpcPeeringOrgTrustingRole:
-    Type: "AWS::IAM::Role"
+    Type: AWS::IAM::Role
     Properties:
       AssumeRolePolicyDocument:
         Statement:
           - Principal:
               AWS: "*"
             Action:
-              - "sts:AssumeRole"
+              - sts:AssumeRole
             Effect: Allow
             Condition:
-              "StringEquals":
+              StringEquals:
                 "aws:PrincipalOrgID": !Ref AwsOrganizationId
       Path: /
       Policies:
@@ -616,14 +616,14 @@ Resources:
             Version: 2012-10-17
             Statement:
               - Effect: Allow
-                Action: "ec2:AcceptVpcPeeringConnection"
+                Action: ec2:AcceptVpcPeeringConnection
                 Resource: "*"
       Tags:
         - Key: Project
           Value: platform.prx.org
-        - Key: "prx:cloudformation:stack-name"
+        - Key: prx:cloudformation:stack-name
           Value: !Ref AWS::StackName
-        - Key: "prx:cloudformation:stack-id"
+        - Key: prx:cloudformation:stack-id
           Value: !Ref AWS::StackId
 
 Outputs:
