Add deletion policy to VPC subnets

--- a/stacks/vpc.yml
+++ b/stacks/vpc.yml
@@ -218,6 +218,7 @@ Resources:
     Type: AWS::EC2::Subnet
     DependsOn: IPv6VCPCidrBlock
     UpdateReplacePolicy: Retain
+    DeletionPolicy: Retain
     Properties:
       VpcId: !Ref VPC
       AvailabilityZone: !Join ["", [!Ref "AWS::Region", a]]
@@ -238,6 +239,7 @@ Resources:
     Type: AWS::EC2::Subnet
     DependsOn: IPv6VCPCidrBlock
     UpdateReplacePolicy: Retain
+    DeletionPolicy: Retain
     Properties:
       VpcId: !Ref VPC
       AvailabilityZone: !If [IsUsEast1, us-east-1c, !Join ["", [!Ref "AWS::Region", b]]]
@@ -258,6 +260,7 @@ Resources:
     Type: AWS::EC2::Subnet
     DependsOn: IPv6VCPCidrBlock
     UpdateReplacePolicy: Retain
+    DeletionPolicy: Retain
     Properties:
       VpcId: !Ref VPC
       AvailabilityZone: !If [IsUsEast1, us-east-1d, !Join ["", [!Ref "AWS::Region", c]]]
