Add missing quotes

--- a/stacks/vpc.yml
+++ b/stacks/vpc.yml
@@ -616,7 +616,7 @@ Resources:
       Policies:
         - PolicyName: root
           PolicyDocument:
-            Version: 2012-10-17
+            Version: "2012-10-17"
             Statement:
               - Effect: Allow
                 Action: ec2:AcceptVpcPeeringConnection
