Check for any adzerk subdomain

--- a/stacks/serverless/analytics-ingest-filters.yml
+++ b/stacks/serverless/analytics-ingest-filters.yml
@@ -212,7 +212,7 @@ Resources:
   AnalyticsPingbacksAdzerkMetric:
     Type: "AWS::Logs::MetricFilter"
     Properties:
-      FilterPattern: '{ $.dest = "engine.adzerk.net" }'
+      FilterPattern: '{ $.dest = "*.adzerk.net" }'
       LogGroupName: !Ref AnalyticsPingbacksLogGroup
       MetricTransformations:
         - MetricName: !Sub "analytics_pingbacks_adzerk_${EnvironmentTypeAbbreviation}"
@@ -221,7 +221,7 @@ Resources:
   AnalyticsPingbacksOtherMetric:
     Type: "AWS::Logs::MetricFilter"
     Properties:
-      FilterPattern: '{ $.dest != "engine.adzerk.net" }'
+      FilterPattern: '{ $.dest != "*.adzerk.net" }'
       LogGroupName: !Ref AnalyticsPingbacksLogGroup
       MetricTransformations:
         - MetricName: !Sub "analytics_pingbacks_other_${EnvironmentTypeAbbreviation}"
