Retain ALB logs bucket on updatereplace

--- a/stacks/load-balancers.yml
+++ b/stacks/load-balancers.yml
@@ -164,6 +164,7 @@ Resources:
   PlatformALBLogsBucket:
     Type: "AWS::S3::Bucket"
     DeletionPolicy: Retain
+    UpdateReplacePolicy: Retain
     Properties:
       LifecycleConfiguration:
         Rules:
