Limit HTTP upgrade rule to staging

--- a/stacks/load-balancers.yml
+++ b/stacks/load-balancers.yml
@@ -132,6 +132,7 @@ Resources:
           Type: fixed-response
   PlatformALBHTTPUpgradeRedirectListenerRule:
     Type: "AWS::ElasticLoadBalancingV2::ListenerRule"
+    Condition: CreateStagingResources
     Properties:
       Actions:
         - RedirectConfig:
