Add missing leading slash to rule path

--- a/stacks/load-balancers.yml
+++ b/stacks/load-balancers.yml
@@ -137,7 +137,7 @@ Resources:
       Actions:
         - RedirectConfig:
             Host: '#{host}'
-            Path: '#{path}'
+            Path: '/#{path}'
             Port: '#{port}'
             Protocol: HTTPS
             Query: '#{query}'
