--- a/stacks/load-balancers.yml
+++ b/stacks/load-balancers.yml
@@ -138,7 +138,7 @@ Resources:
         - RedirectConfig:
             Host: '#{host}'
             Path: '/#{path}'
-            Port: '#{port}'
+            Port: '443'
             Protocol: HTTPS
             Query: '#{query}'
             StatusCode: HTTP_301
