--- a/stacks/root.yml
+++ b/stacks/root.yml
@@ -120,6 +120,8 @@ Parameters:
     Type: String
   DovetailTrafficLambdaCodeS3ObjectVersion:
     Type: String
+  DovetailCdnArrangerCodeS3ObjectVersion:
+    Type: String
   ProxyPrxOrgCodeS3ObjectVersion:
     Type: String
   PRXUploadAccessKey:
@@ -255,6 +257,7 @@ Resources:
         DovetailBytesLambdaCodeS3ObjectVersion: !Ref DovetailBytesLambdaCodeS3ObjectVersion
         DovetailCountsLambdaCodeS3ObjectVersion: !Ref DovetailCountsLambdaCodeS3ObjectVersion
         DovetailTrafficLambdaCodeS3ObjectVersion: !Ref DovetailTrafficLambdaCodeS3ObjectVersion
+        DovetailCdnArrangerCodeS3ObjectVersion: !Ref DovetailCdnArrangerCodeS3ObjectVersion
         AnalyticsIngestLambdaCodeS3ObjectVersion: !Ref AnalyticsIngestLambdaCodeS3ObjectVersion
         RadiotopiaTowerLambdaCodeS3ObjectVersion: !Ref RadiotopiaTowerLambdaCodeS3ObjectVersion
         PixelPrxOrgCodeS3ObjectVersion: !Ref PixelPrxOrgCodeS3ObjectVersion
