--- a/stacks/serverless/dovetail-cdn-arranger.yml
+++ b/stacks/serverless/dovetail-cdn-arranger.yml
@@ -1,5 +1,5 @@
 # stacks/serverless/dovetail-cdn-arranger.yml
-AWSTemplateFormatVersion: '2010-09-09'
+AWSTemplateFormatVersion: 2010-09-09
 Description: Dovetail CDN Arranger lambda function
 Conditions:
   IsProduction: !Equals [!Ref EnvironmentType, Production]
@@ -20,7 +20,6 @@ Resources:
   DovetailCdnArrangerWorkspaceBucket:
     Type: AWS::S3::Bucket
     Properties:
-      # TODO: tag-specific expirations
       LifecycleConfiguration:
         Rules:
           - ExpirationInDays: 30
@@ -46,59 +45,59 @@ Resources:
       Description: ffmpeg binaries for dovetail-cdn-arranger
       LicenseInfo: MIT
   DovetailCdnArrangerExecutionIAMRole:
-    Type: 'AWS::IAM::Role'
+    Type: AWS::IAM::Role
     Properties:
       AssumeRolePolicyDocument:
-        Version: '2012-10-17'
+        Version: 2012-10-17
         Statement:
-          - Effect: 'Allow'
+          - Effect: Allow
             Principal:
               Service:
-                - 'lambda.amazonaws.com'
+                - lambda.amazonaws.com
             Action:
-              - 'sts:AssumeRole'
-      Path: '/'
+              - sts:AssumeRole
+      Path: /
       Policies:
         - PolicyName: DynamoDBWritePolicy
           PolicyDocument:
-            Version: '2012-10-17'
+            Version: 2012-10-17
             Statement:
               - Effect: Allow
                 Action:
-                  - 'dynamodb:DescribeTable'
-                  - 'dynamodb:GetItem'
-                  - 'dynamodb:PutItem'
+                  - dynamodb:DescribeTable
+                  - dynamodb:GetItem
+                  - dynamodb:PutItem
                 Resource:
                   - !Ref DynamodbTableArn
         - PolicyName: S3WritePolicy
           PolicyDocument:
-            Version: '2012-10-17'
+            Version: 2012-10-17
             Statement:
               - Effect: Allow
                 Action:
-                  - 's3:ListBucket'
+                  - s3:ListBucket
                 Resource:
                   - !GetAtt DovetailCdnArrangerWorkspaceBucket.Arn
               - Effect: Allow
                 Action:
-                  - 's3:GetObject'
-                  - 's3:PutObject'
-                  - 's3:PutObjectTagging'
+                  - s3:GetObject
+                  - s3:PutObject
+                  - s3:PutObjectTagging
                 Resource:
                   - !Sub ${DovetailCdnArrangerWorkspaceBucket.Arn}/*
       ManagedPolicyArns:
-        - 'arn:aws:iam::aws:policy/CloudWatchLambdaInsightsExecutionRolePolicy'
+        - arn:aws:iam::aws:policy/CloudWatchLambdaInsightsExecutionRolePolicy
       Tags:
         - Key: Project
           Value: Dovetail
         - Key: Environment
           Value: !Ref EnvironmentType
-        - Key: 'prx:cloudformation:stack-name'
+        - Key: prx:cloudformation:stack-name
           Value: !Ref AWS::StackName
-        - Key: 'prx:cloudformation:stack-id'
+        - Key: prx:cloudformation:stack-id
           Value: !Ref AWS::StackId
   DovetailCdnArrangerFunction:
-    Type: 'AWS::Lambda::Function'
+    Type: AWS::Lambda::Function
     Properties:
       Code:
         S3Bucket: !Ref CodeS3Bucket
@@ -127,7 +126,7 @@ Resources:
           Value: !Ref EnvironmentType
         - Key: Name
           Value: !Sub Dovetail-Counts-${EnvironmentType}
-        - Key: 'prx:cloudformation:stack-name'
+        - Key: prx:cloudformation:stack-name
           Value: !Ref AWS::StackName
-        - Key: 'prx:cloudformation:stack-id'
+        - Key: prx:cloudformation:stack-id
           Value: !Ref AWS::StackId
