Keep date quotes

--- a/stacks/serverless/dovetail-cdn-arranger.yml
+++ b/stacks/serverless/dovetail-cdn-arranger.yml
@@ -1,5 +1,5 @@
 # stacks/serverless/dovetail-cdn-arranger.yml
-AWSTemplateFormatVersion: 2010-09-09
+AWSTemplateFormatVersion: '2010-09-09'
 Description: Dovetail CDN Arranger lambda function
 Conditions:
   IsProduction: !Equals [!Ref EnvironmentType, Production]
@@ -48,7 +48,7 @@ Resources:
     Type: AWS::IAM::Role
     Properties:
       AssumeRolePolicyDocument:
-        Version: 2012-10-17
+        Version: '2012-10-17'
         Statement:
           - Effect: Allow
             Principal:
@@ -60,7 +60,7 @@ Resources:
       Policies:
         - PolicyName: DynamoDBWritePolicy
           PolicyDocument:
-            Version: 2012-10-17
+            Version: '2012-10-17'
             Statement:
               - Effect: Allow
                 Action:
@@ -71,7 +71,7 @@ Resources:
                   - !Ref DynamodbTableArn
         - PolicyName: S3WritePolicy
           PolicyDocument:
-            Version: 2012-10-17
+            Version: '2012-10-17'
             Statement:
               - Effect: Allow
                 Action:
