--- a/stacks/serverless/root.yml
+++ b/stacks/serverless/root.yml
@@ -200,11 +200,11 @@ Resources:
         DovetailHost: !Sub /prx/${EnvironmentTypeAbbreviation}/dovetail-cdn-arranger/DOVETAIL_HOST
         DovetailToken: !Sub /prx/${EnvironmentTypeAbbreviation}/dovetail-cdn-arranger/DOVETAIL_TOKEN
       Tags:
-        - Key: "prx:cloudformation:stack-name"
+        - Key: prx:cloudformation:stack-name
           Value: !Ref AWS::StackName
-        - Key: "prx:cloudformation:stack-id"
+        - Key: prx:cloudformation:stack-id
           Value: !Ref AWS::StackId
-      TemplateURL: !Join ["", [!Ref TemplateUrlPrefix, "dovetail-cdn-arranger.yml"]]
+      TemplateURL: !Sub ${TemplateUrlPrefix}dovetail-cdn-arranger.yml
       TimeoutInMinutes: 5
   AnalyticsIngestLambdasStack:
     Type: "AWS::CloudFormation::Stack"
