More specific ENV naming

--- a/stacks/serverless/dovetail-cdn-arranger.yml
+++ b/stacks/serverless/dovetail-cdn-arranger.yml
@@ -10,11 +10,13 @@ Parameters:
     Type: String
   EnvironmentType:
     Type: String
+  ArrangementsDynamodbRegion:
+    Type: AWS::SSM::Parameter::Value<String>
+  ArrangementsDynamodbTable:
+    Type: AWS::SSM::Parameter::Value<String>
   DovetailHost:
     Type: AWS::SSM::Parameter::Value<String>
   DovetailToken:
-    Type: AWS::SSM::Parameter::Value<String>
-  ArrangementsDynamodbTable:
     Type: AWS::SSM::Parameter::Value<String>
 Resources:
   DtCdnArrangerWorkspaceBucket:
@@ -107,10 +109,11 @@ Resources:
       Description: Dovetail CDN Arranger
       Environment:
         Variables:
-          DDB_TABLE: !Ref ArrangementsDynamodbTable
+          ARRANGEMENTS_DDB_REGION: !Ref ArrangementsDynamodbRegion
+          ARRANGEMENTS_DDB_TABLE: !Ref ArrangementsDynamodbTable
           DOVETAIL_HOST: !Ref DovetailHost
           DOVETAIL_TOKEN: !Ref DovetailToken
-          S3_BUCKET: !Ref DtCdnArrangerWorkspaceBucket
+          WORKSPACE_S3_BUCKET: !Ref DtCdnArrangerWorkspaceBucket
       Handler: index.handler
       Layers: !If
         - IsProduction
