--- a/stacks/serverless/root.yml
+++ b/stacks/serverless/root.yml
@@ -188,15 +188,14 @@ Resources:
     Type: AWS::CloudFormation::Stack
     Properties:
       NotificationARNs:
-        - Fn::ImportValue:
-            !Sub ${InfrastructureNotificationsStackName}-CloudFormationNotificationSnsTopic
+        - Fn::ImportValue: !Sub ${InfrastructureNotificationsStackName}-CloudFormationNotificationSnsTopic
       Parameters:
         CodeS3Bucket:
-          Fn::ImportValue:
-            !Sub ${InfrastructureStorageStackName}-InfrastructureApplicationCodeBucket
+          Fn::ImportValue: !Sub ${InfrastructureStorageStackName}-InfrastructureApplicationCodeBucket
         CodeS3ObjectVersion: !Ref DovetailCdnArrangerCodeS3ObjectVersion
         EnvironmentType: !Ref EnvironmentType
-        ArrangementsDynamodbTable: !Sub /prx/${EnvironmentTypeAbbreviation}/dovetail-cdn-arranger/DYNAMODB_TABLE
+        ArrangementsDynamodbTable: !Sub /prx/${EnvironmentTypeAbbreviation}/dovetail-cdn-arranger/ARRANGEMENTS_DDB_TABLE
+        ArrangementsDynamodbRegion: !Sub /prx/${EnvironmentTypeAbbreviation}/dovetail-cdn-arranger/ARRANGEMENTS_DDB_REGION
         DovetailHost: !Sub /prx/${EnvironmentTypeAbbreviation}/dovetail-cdn-arranger/DOVETAIL_HOST
         DovetailToken: !Sub /prx/${EnvironmentTypeAbbreviation}/dovetail-cdn-arranger/DOVETAIL_TOKEN
       Tags:
