--- a/stacks/serverless/dovetail-cdn-arranger.yml
+++ b/stacks/serverless/dovetail-cdn-arranger.yml
@@ -122,14 +122,14 @@ Resources:
       MemorySize: 8000
       Role: !GetAtt DovetailCdnArrangerExecutionIAMRole.Arn
       Runtime: nodejs14.x
-      Timeout: 300
+      Timeout: 900
       Tags:
         - Key: Project
           Value: Dovetail
         - Key: Environment
           Value: !Ref EnvironmentType
         - Key: Name
-          Value: !Sub Dovetail-Counts-${EnvironmentType}
+          Value: !Sub Dovetail-Cdn-Arranger-${EnvironmentType}
         - Key: prx:cloudformation:stack-name
           Value: !Ref AWS::StackName
         - Key: prx:cloudformation:stack-id
