Add formatter settings for VS Code

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -3,6 +3,7 @@
   "editor.tabSize": 2,
   "editor.trimAutoWhitespace": true,
   "files.insertFinalNewline": true,
+  "python.formatting.provider": "black",
   "[makefile]": {
     "editor.insertSpaces": false,
     "editor.tabSize": 4
@@ -15,4 +16,12 @@
     "editor.formatOnSave": true,
     "editor.formatOnSaveMode": "modifications"
   },
+  "[yaml]": {
+    "editor.defaultFormatter": "esbenp.prettier-vscode",
+    "editor.formatOnSave": true
+  },
+  "[python]": {
+    "editor.defaultFormatter": "ms-python.python",
+    "editor.formatOnSave": true
+  }
 }
