Use single quotes for YAML formatting

--- a/.prettierrc.yml
+++ b/.prettierrc.yml
@@ -1,15 +1,18 @@
 semi: true
-trailingComma: 'all'
+trailingComma: "all"
 singleQuote: true
 printWidth: 80
 useTabs: false
 tabWidth: 2
 endOfLine: lf
 overrides:
-  - files: '*.md'
+  - files: "*.md"
     options:
       tabWidth: 4
-  - files: 'Makefile'
+  - files: "Makefile"
     options:
       tabWidth: 4
       useTabs: true
+  - files: "*.yml"
+    options:
+      singleQuote: false
