Include ffmpeg binary layer

--- a/stacks/serverless/dovetail-cdn-arranger.yml
+++ b/stacks/serverless/dovetail-cdn-arranger.yml
@@ -115,10 +115,12 @@ Resources:
           DOVETAIL_TOKEN: !Ref DovetailToken
           WORKSPACE_S3_BUCKET: !Ref DtCdnArrangerWorkspaceBucket
       Handler: index.handler
-      Layers: !If
-        - IsProduction
-        - - !Sub arn:aws:lambda:${AWS::Region}:580247275435:layer:LambdaInsightsExtension:14
-        - !Ref AWS::NoValue
+      Layers:
+        - !Ref DovetailCdnArrangerBinaryLayer
+        - !If
+          - IsProduction
+          - !Sub arn:aws:lambda:${AWS::Region}:580247275435:layer:LambdaInsightsExtension:14
+          - !Ref AWS::NoValue
       MemorySize: 8000
       Role: !GetAtt DovetailCdnArrangerExecutionIAMRole.Arn
       Runtime: nodejs14.x
