--- a/buildspec.yml
+++ b/buildspec.yml
@@ -6,7 +6,7 @@ phases:
   install:
     runtime-versions:
       python: 3.8
-      node: 14
+      nodejs: 14
     commands:
       - 'npm install'
       - 'pip3 install -r requirements.txt'
