--- a/buildspec.yml
+++ b/buildspec.yml
@@ -18,6 +18,7 @@ phases:
       - 'python3.8 -m flake8'
       - 'npm run tsc'
       - 'npm run eslint -- "**/*.js"'
+      - 'npm run prettier -- --check "**/*.{js,json}"'
   post_build:
       commands:
         - 'curl -sO "https://raw.githubusercontent.com/PRX/Infrastructure/master/ci/utility/post_build.sh" && chmod +x post_build.sh && bash ./post_build.sh'
